<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/feedback" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_marginTop="@dimen/hbms_home_screen_button_bottom_padding"
            android:text="@string/feedback"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edittext_textfeedback"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="8dp"
            android:background="@drawable/square_drawablebackground"
            android:gravity="center"
            android:hint="Enter Feedback"
            android:maxLength="250"
            android:padding="4dp"
            android:textColor="#808080" />

        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_corner_bg"
            android:text="@string/send"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="OR"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginTop="@dimen/hbms_home_screen_button_bottom_padding"
            android:text="@string/audio_feedback"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />


        <Chronometer
            android:id="@+id/chronometer"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/file_name"
            android:layout_gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="FeedBack.MP4"
            android:gravity="center"
            android:visibility="gone"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layout_audio_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal"
            android:background="@color/white"
            android:weightSum="0.75">


            <ImageButton
                android:id="@+id/record"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_weight="0.25"
                android:src="@drawable/rec_com"
                android:background="@color/white"
                android:text="Record"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/stop"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="0.25"
                android:src="@drawable/icon_stop"
                android:background="@color/white"
                android:text="Stop"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/play"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="0.25"
                android:src="@drawable/icon_play"
                android:background="@color/white"
                android:text="Play"
                android:textSize="20sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal"
            android:weightSum="0.75">

            <TextView
                android:id="@+id/txt_record"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/record"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_stop"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/stop"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_play"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/play"
                android:textSize="20sp" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_audio_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_corner_bg"
            android:text="@string/audio_feedback_send"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>