<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/app_logo_img"
        android:layout_width="@dimen/dept_img_size"
        android:layout_height="@dimen/dept_img_size"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/scheme_beneficiray_list_padding"
        android:src="@drawable/karlogo" />

    <TextView
        android:id="@+id/horti_round_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_logo_img"
        android:layout_margin="@dimen/scheme_beneficiray_list_padding"
        android:gravity="center"
        android:textSize="@dimen/nic_text"
        android:text="@string/horti_dept_txt"
        android:textColor="@color/black"
        android:textStyle="bold" />



    <TextView
        android:id="@+id/app_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/horti_round_logo"
        android:layout_margin="@dimen/login_button_padding"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/seagreen"
        android:textSize="@dimen/app_name_text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_mobile_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name_text_view"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/login_page_edit_text_margin_size"
        android:focusable="true"
        android:hint="Enter Mobile Number"
        android:maxLength="10"
        android:maxLines="1"
        android:textColor="@color/seagreen"
        android:inputType="number"
        android:textColorHighlight="#f93"
        android:textColorHint="@color/hbms_button_color"
        android:textCursorDrawable="@drawable/green_cursor"
        android:textSize="@dimen/login_edit_text_size" />

    <EditText
        android:id="@+id/edit_text_aadhaar_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_mobile_number"
        android:layout_centerInParent="true"
        android:layout_marginTop="26dp"
        android:layout_margin="@dimen/login_page_edit_text_margin_size"
        android:focusable="true"
        android:hint="Enter Aadhaar Number"
        android:inputType="number"
        android:maxLength="12"
        android:textColor="@color/seagreen"
        android:textColorHighlight="#f93"
        android:textColorHint="@color/hbms_button_color"
        android:textCursorDrawable="@drawable/green_cursor"
        android:textSize="@dimen/login_edit_text_size" />


    <Button
        android:id="@+id/btn_get_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_aadhaar_number"
        android:background="@drawable/rounded_button_state"
        android:gravity="center"
        android:padding="12dp"
        android:text="Send OTP"
        android:layout_centerInParent="true"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/pre_inspection_scheme_header_text_size" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/btn_get_otp"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nic_dept_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nic_dept_text"
            android:textSize="@dimen/nic_text"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/nic_image_view"
            android:layout_width="@dimen/nic_img_size"
            android:layout_height="@dimen/nic_img_size"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:gravity="center"
            android:src="@drawable/nic" />

        <TextView
            android:id="@+id/nic_dept_brif_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nic_dept_txt_brief"
            android:textSize="@dimen/nic_text"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nic_dept_karnataka_state_unit"
            android:textSize="@dimen/nic_text"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>